@@ -1,5 +1,6 @@
 3.jul  (la)
       - fix #10585: Accidental offset in small staves corrupted by saving and reloading (patch by Miwarre)
+      - fix #10313: Align settings in Edit Text Style dlg box not stored (patch by Miwarre)
 1.jul  (la)
       - fix printing of images (fix #10140: Save as PDF with several images causes crash)
       - implement MuseScore Connect
